# cpsc547-relviz

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
gracefall/: __init__.py  chart_generators.py  data_processors.py  dataloader.py  main.py  pca_view_utils.py  view_arrangers.py  view_generators.py
gracefall/static/: __init__.py  basic_plots.py  raw.py
sample_data/: erosion_test_report.json  fpga_sample_test.json  new_ramp_test_report.json  threshold_resistance_test_report.json
sample_data/amp_gain_test_compare/: curr_htol_test_report.json  curr_ltol_test_report.json  curr_ramp_test_report.json  new_htol_test_report.json  new_ltol_test_report.json
sample_data/standalone_tests/: threshold_resistance_test_report.json
tests/: test_full_flow.py
tests/generator_tests/: test_stress_view_gen.py
